# vibe-learning-rag

./: .env.example  .gitignore  .tool-versions  AI_AGENT_FRAMEWORKS_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_CREWAI.md  CLAUDE_LANGCHAIN.md  CLAUDE_LANGGRAPH.md  CLAUDE_LANGSMITH.md  CLAUDE_MILVUS.md  CLAUDE_PYTHON_BACKEND.md  LEARNING_PROGRESS.md  docker-compose.yml  poll_replace_banned.py  pyproject.toml  todo.md
.claude/: settings.local.json
atom/L1_NLP基础/: 02_Embedding原理与选型.md  k.md
atom/L2_LLM核心/: k.md
atom/L5_框架与落地/: k.md
atom/ai-agent-production/: 01_LLMOps.md  02_替代框架.md  03_企业架构.md  04_安全防护.md  05_测试评估.md  06_记忆系统.md  07_多语言生态.md  08_部署基础设施.md  09_向量数据库.md  10_项目组合.md  README.md
atom/codex-cli/: CLAUDE_CODEX_CLI.md  README.md
atom/openclaw/: CLAUDE_OPENCLAW.md  README.md
atom/pi-mono/: CLAUDE_PI_MONO.md
atom/zeroclaw/: CLAUDE_ZEROCLAW.md
docs/: agentic-rag-cag-learning-guide.md  ai-agent-core-skills-and-resources.md  milvus_expansion_summary.md  milvus_learning_path.md  python-backend-learning-resources.md  restructure_summary.md
docs/plans/: 2026-02-05-transformer-intuition-design.md  2026-02-06-conversational-rag-design.md  2026-02-06-python-environment-design.md  2026-02-06-幻觉检测与缓解-design.md  2026-02-08-evaluation-tuning-design.md  2026-02-09-l5-framework-landing-design.md  2026-02-09-milvus-architecture-overview-design.md  2026-02-09-milvus-architecture-overview-implementation.md  2026-02-09-milvus-consistency-levels-design.md  2026-02-09-milvus-data-insertion-query-design.md  (+4 more)
examples/: README.md  basic_rag.py  verify_env.py
poc/: codex-cli-proxy-config.md  pi-mono-integration-research.md
prompt/: atom_knowledge.md  atom_template.md
structure/: learning_path.md
(+5320 files in other folders)
