[project]
name = "vibe-learning-rag"
version = "0.1.0"
description = "RAG Development Learning Repository with atomized knowledge points"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.21.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.7.1",
    "pymupdf==1.27.1",
    "unstructured[pdf]>=0.10.0",
    "pytesseract>=0.3.10",
    # Unstructured 会在运行时尝试自动下载该 spaCy 模型；这里显式固定，避免离线/受限网络时报错
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.12.0",
    "numpy>=2.4.2",
    "transformers>=5.1.0",
    "torch>=2.10.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "anthropic>=0.79.0",
    "pymilvus>=2.6.9",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
]
